# marc-rs

./: Cargo.toml  README.md
samples/: Bloom_CiteThemRight_Videos_2025-12-02.mrc  Open Book Publishers full record set December 2025.mrc  bibliographiq_unimarc_iso5426.not
src/: encoding.rs  format.rs  helpers.rs  lib.rs  parser.rs  record.rs  serde_marc.rs  writer.rs
src/fields/: added_entry.rs  control.rs  edition.rs  linking.rs  main_entry.rs  mod.rs  note.rs  physical.rs  series.rs  subject.rs  title.rs
tests/: integration_test.rs  serde_marc_test.rs
