[package]
name = "marc-rs"
version = "0.1.2"
edition = "2021"
authors = ["Jean Collonvillé <jcollonville@b-612.fr>"]
description = "Rust library for MARC21, UNIMARC, and MARC XML format support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcollonville/marc-rs"
keywords = ["marc", "marc21", "unimarc", "bibliographic", "library"]
categories = ["encoding", "parsing"]

[dependencies]
# Parsing XML
quick-xml = { version = "0.31", features = ["serialize"] }

# Encodage
encoding_rs = "0.8"


[[bin]]
name = "marc-viewer"
path = "src/bin/marc-viewer.rs"

[dev-dependencies]
